--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "sans": "^1.0.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
