--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo-google-fonts/nunito-sans": "^0.2.3",
     "@expo/webpack-config": "^19.0.0",
